Fixed misalignment of the top axis with the lines

--- a/LiveBarsControl/Scripts/stylesheets/chart.css
+++ b/LiveBarsControl/Scripts/stylesheets/chart.css
@@ -84,6 +84,7 @@ div.barHandle {
 }
 
 div.chartOriginPoint {
+    margin: 0;
     box-sizing: border-box;
     float: left;
     text-align: right;
@@ -94,19 +95,19 @@ div.chartOriginPoint {
 
 div.chartAxisX {
     margin: 0;
-    position: relative;
+    position: absolute;
     float: left;
     box-sizing: border-box;
     overflow: hidden;
     height: 100%;
     background-color: aliceblue;
+    font-size: 10px;
 }
 
 div.chartAxisY {
     margin: 0;
-    position: relative;
+    position: absolute;
     float: left;
-    margin-right: 5px;
     padding-right: 2px;
     border-right: 1px black;
     box-sizing: border-box;
@@ -132,6 +133,7 @@ div.chartPartMain {
 }
 
 div.chartPartLeftSideBar {
+    margin: 0;
     position: relative;
     box-sizing: border-box;
     float: left;
